--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "dependencies": {
     "debug": "^2.6.4",
     "es6-promise": "^3.3.1",
+    "follow-redirects": "^1.9.0",
     "raw-body": "^2.2.0",
     "winston": "^2.3.1"
   },
